tests/snapshots/wire_snapshots__search_for_albums_the_way_an_amplifier_asks.snap
---
source: tests/wire_snapshots.rs
expression: "readable(&look_for(&indexed(),\nr#\"upnp:class derivedfrom \"object.container.album\" and @refID exists false\"#))"
---
<?xml version="1.0" encoding="utf-8"?>
<s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">
<s:Body>
<u:SearchResponse xmlns:u="urn:schemas-upnp-org:service:ContentDirectory:1">
<Result>&lt;DIDL-Lite xmlns=&quot;urn:schemas-upnp-org:metadata-1-0/DIDL-Lite/&quot; xmlns:dc=&quot;http://purl.org/dc/elements/1.1/&quot; xmlns:upnp=&quot;urn:schemas-upnp-org:metadata-1-0/upnp/&quot; xmlns:dlna=&quot;urn:schemas-dlna-org:metadata-1-0/&quot;&gt;&lt;container id=&quot;al-74a3d9055aef241e&quot; parentID=&quot;albums&quot; restricted=&quot;1&quot; searchable=&quot;1&quot; childCount=&quot;2&quot;&gt;&lt;dc:title&gt;!Dundunbanza!&lt;/dc:title&gt;&lt;upnp:genre&gt;Latin&lt;/upnp:genre&gt;&lt;dc:date&gt;1994-01-01&lt;/dc:date&gt;&lt;upnp:artist&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;dc:creator&gt;Sierra Maestra&lt;/dc:creator&gt;&lt;upnp:artist role=&quot;AlbumArtist&quot;&gt;Sierra Maestra&lt;/upnp:artist&gt;&lt;upnp:class&gt;object.container.album.musicAlbum&lt;/upnp:class&gt;&lt;/container&gt;&lt;/DIDL-Lite&gt;</Result>
<NumberReturned>1</NumberReturned>
<TotalMatches>1</TotalMatches>
<UpdateID>1</UpdateID>
</u:SearchResponse>
</s:Body>
</s:Envelope>
