tests/snapshots/wire_snapshots__search_matching_nothing_is_a_document_rather_than_a_fault.snap
---
source: tests/wire_snapshots.rs
expression: "readable(&look_for(&indexed(),\nr#\"upnp:class derivedfrom \"object.item.imageItem\"\"#))"
---
<?xml version="1.0" encoding="utf-8"?>
<s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">
<s:Body>
<u:SearchResponse xmlns:u="urn:schemas-upnp-org:service:ContentDirectory:1">
<Result>&lt;DIDL-Lite xmlns=&quot;urn:schemas-upnp-org:metadata-1-0/DIDL-Lite/&quot; xmlns:dc=&quot;http://purl.org/dc/elements/1.1/&quot; xmlns:upnp=&quot;urn:schemas-upnp-org:metadata-1-0/upnp/&quot; xmlns:dlna=&quot;urn:schemas-dlna-org:metadata-1-0/&quot;&gt;&lt;/DIDL-Lite&gt;</Result>
<NumberReturned>0</NumberReturned>
<TotalMatches>0</TotalMatches>
<UpdateID>1</UpdateID>
</u:SearchResponse>
</s:Body>
</s:Envelope>
