tests/snapshots/wire_snapshots__several_values_for_one_tag.snap
---
source: tests/wire_snapshots.rs
expression: readable(&didl)
---
<DIDL-Lite xmlns="urn:schemas-upnp-org:metadata-1-0/DIDL-Lite/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:upnp="urn:schemas-upnp-org:metadata-1-0/upnp/" xmlns:dlna="urn:schemas-dlna-org:metadata-1-0/">
<item id="t0000000000000001" parentID="0" restricted="1">
<dc:title>Symphony No. 9</dc:title>
<upnp:genre>Latin</upnp:genre>
<dc:date>1994-01-01</dc:date>
<upnp:album>!Dundunbanza!</upnp:album>
<upnp:artist>Christian Thielemann</upnp:artist>
<upnp:artist>Beethoven</upnp:artist>
<dc:creator>Christian Thielemann</dc:creator>
<upnp:artist role="AlbumArtist">Christian Thielemann</upnp:artist>
<upnp:artist role="AlbumArtist">Wiener Philharmoniker</upnp:artist>
<upnp:originalTrackNumber>1</upnp:originalTrackNumber>
<res duration="0:00:01.000" size="10" bitsPerSample="16" bitrate="176400" sampleFrequency="44100" nrAudioChannels="2" protocolInfo="http-get:*:audio/x-flac:DLNA.ORG_OP=01;DLNA.ORG_FLAGS=01700000000000000000000000000000">http://192.0.2.1:8200/media/t0000000000000001</res>
<upnp:class>object.item.audioItem.musicTrack</upnp:class>
</item>
</DIDL-Lite>
